--- a/index.html
+++ b/index.html
@@ -2,11 +2,17 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no">
     <title>studybar</title>
+    <!-- <style>
+      html{
+        font-size: 100px;
+      }
+    </style> -->
   </head>
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
+
 </html>
